feat: use Jasypt for application-local.yml